Updated the media links to display index.html

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             </section>
 
             <section class="imageContainer">
-                <img src="media\profileImage.jpg" alt="error fetching image" class="portfolioImage revealOnScroll" data-delay="0.4">
+                <img src="./profileImage.jpg" alt="error fetching image" class="portfolioImage revealOnScroll" data-delay="0.4">
             </section>
         </section>
     <!-- End of Section One -->
@@ -88,7 +88,7 @@
     <!-- End of section 2 -->
 
             <video id="hoverVideo" autoplay loop muted class="hoverPreview">
-                <source id ="hoverVideoSource" src="media/novelNookProjectDemo.mp4" type="video/mp4">
+                <source id ="hoverVideoSource" src="./novelNookProjectDemo.mp4" type="video/mp4">
             </video>
 
     <!-- Section 3 My projects section -->
