Updated index.html for more scroll animation on projects section

--- a/index.html
+++ b/index.html
@@ -98,11 +98,11 @@
             </section>
             <div class="projectsWrapper"> <!-- Main container for displaying projects -->
             <!-- First Project -->
-                <div class="projectCard"> <!-- Wrapper or card used to display projects inside the main container for displaying projects -->
+                <div class="projectCard revealOnScroll" data-delay="0.1"> <!-- Wrapper or card used to display projects inside the main container for displaying projects -->
                     <div class="projectInfo">
                         <p>
                             <b>Full-Stack Sales & Inventory System (Bookstore)</b><br>
-                            <i>First-Year Capstone Project</i><br><br>
+                            <i class="revealOnScrollEachLetter">First-Year Capstone Project</i><br><br>
                         </p>
                         <p>
                             Designed and developed a full-stack Java-based sales and inventory<br>
@@ -112,14 +112,14 @@
                             integrated a database to manage products, sales, and inventory records.
                         </p>
                     </div>
-                    <div class="projectDate">April-May 2025</div>
+                    <div class="projectDate revealOnScrollEachLetter">April-May 2025</div>
                 </div>
             <!-- Second Project -->
-                <div class="projectCard"> <!-- Wrapper or card used to display projects inside the main container for displaying projects -->
+                <div class="projectCard revealOnScroll" data-delay="0.3"> <!-- Wrapper or card used to display projects inside the main container for displaying projects -->
                     <div class="projectInfo">
                         <p>
                             <b>Web Designer & Developer </b><br>
-                            <i>Senior Year Project</i><br><br>
+                            <i class="revealOnScrollEachLetter">Senior Year Project</i><br><br>
                         </p>
                         <p>
                             Designed, developed, and deployed a landing page for our school<br>
@@ -127,14 +127,14 @@
                             GitHub Pages.
                         </p>
                     </div>
-                    <div class="projectDate">April-May 2024</div>
+                    <div class="projectDate revealOnScrollEachLetter">April-May 2024</div>
                 </div>
             <!-- Third Project -->
-                <div class="projectCard"> <!-- Wrapper or card used to display projects inside the main container for displaying projects -->
+                <div class="projectCard revealOnScroll" data-delay="0.4"> <!-- Wrapper or card used to display projects inside the main container for displaying projects -->
                     <div class="projectInfo">
                         <p>
                             <b>Web Designer & Developer</b><br>
-                            <i>Personal Project</i><br><br>
+                            <i class="revealOnScrollEachLetter">Personal Project</i><br><br>
                         </p>
                         <p>
                             Designed, developed, and deployed a responsive landing page for our<br>
@@ -143,7 +143,7 @@
                             user interaction.
                         </p>
                     </div>
-                    <div class="projectDate">Febuary-March 2024</div>
+                    <div class="projectDate revealOnScrollEachLetter">Febuary-March 2024</div>
                 </div>
             </div>
         </section>
