--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             </section>
 
             <section class="imageContainer">
-                <img src="./profileImage.jpg" alt="error fetching image" class="portfolioImage revealOnScroll" data-delay="0.4">
+                <img src="media\profileImage.jpg" alt="error fetching image" class="portfolioImage revealOnScroll" data-delay="0.4">
             </section>
         </section>
     <!-- End of Section One -->
@@ -88,7 +88,7 @@
     <!-- End of section 2 -->
 
             <video id="hoverVideo" autoplay loop muted class="hoverPreview">
-                <source id ="hoverVideoSource" src="./novelNookProjectDemo.mp4" type="video/mp4">
+                <source id ="hoverVideoSource" src="media/novelNookProjectDemo.mp4" type="video/mp4">
             </video>
 
     <!-- Section 3 My projects section -->
@@ -97,49 +97,67 @@
                 <p class="revealOnScrollEachLetter">Projects</p>
             </section>
             <div class="projectsWrapper"> <!-- Main container for displaying projects -->
-            <!-- First Project -->
+                <!-- Latest Project -->
                 <div class="projectCard revealOnScroll" data-delay="0.1"> <!-- Wrapper or card used to display projects inside the main container for displaying projects -->
                     <div class="projectInfo">
                         <p>
-                            <b>Full-Stack Sales & Inventory System (Bookstore)</b><br>
-                            <i class="revealOnScrollEachLetter">First-Year Capstone Project</i><br><br>
+                            <b>Korean Restaurant Landing Page</b><br>
+                            <i class="revealOnScrollEachLetter">Personal Project (Web Designer & Developer)</i><br><br>
                         </p>
                         <p>
-                            Designed and developed a full-stack Java-based sales and inventory<br>
-                            system for a bookstore as a final project during my first year as a BSIT<br>
-                            stuent. Created the user interface design in Figma, implemented both<br>
+                            Designed, developed, and deployed a modern landing page for a Korean restaurant,
+                            featuring an engaging showcase of the menu, restaurant story, and contact information.
+                            Prioritized clean and intuitive UI/UX design, smooth animations, and seamless user
+                            interactions to deliver an appealing and professional web experience.
+                        </p>
+                    </div>
+                    <div class="projectDate revealOnScrollEachLetter">June 2025</div>
+                </div>
+            <!-- Another Project -->
+                <div class="projectCard revealOnScroll" data-delay="0.2"> <!-- Wrapper or card used to display projects inside the main container for displaying projects -->
+                    <div class="projectInfo">
+                        <p>
+                            <b>Sales & Inventory System (Bookstore)</b><br>
+                            <i class="revealOnScrollEachLetter">First-Year Capstone Project (Full-Stack)</i><br><br>
+                        </p>
+                        <p>
+                            Designed and developed a full-stack Java-based sales and inventory
+                            system for a bookstore as a final project during my first year as a BSIT
+                            stuent. Created the user interface design in Figma, implemented both
                             frontend and backend functionalities including full CRUD operations, and
                             integrated a database to manage products, sales, and inventory records.
                         </p>
                     </div>
                     <div class="projectDate revealOnScrollEachLetter">April-May 2025</div>
                 </div>
-            <!-- Second Project -->
+            <!-- Another Project -->
                 <div class="projectCard revealOnScroll" data-delay="0.3"> <!-- Wrapper or card used to display projects inside the main container for displaying projects -->
                     <div class="projectInfo">
                         <p>
-                            <b>Web Designer & Developer </b><br>
-                            <i class="revealOnScrollEachLetter">Senior Year Project</i><br><br>
+                            <b>School Landing Page</b><br>
+                            <i class="revealOnScrollEachLetter">Senior Year Project (Web Designer & Developer)</i><br><br>
                         </p>
                         <p>
-                            Designed, developed, and deployed a landing page for our school<br>
-                            website as part of our final programming project, hosting it online using<br>
-                            GitHub Pages.
+                            Designed, developed, and deployed a responsive landing page for our school website as
+                            part of our final programming project, hosted online via GitHub Pages. The site showcases
+                            the school's mission and vision, an overview about the school, admission requirements,
+                            and an interactive prototype of the enrollment form. It also features a dynamic display of
+                            user-submitted enrollment data to simulate a real enrollment process.
                         </p>
                     </div>
                     <div class="projectDate revealOnScrollEachLetter">April-May 2024</div>
                 </div>
-            <!-- Third Project -->
-                <div class="projectCard revealOnScroll" data-delay="0.2"> <!-- Wrapper or card used to display projects inside the main container for displaying projects -->
+            <!-- Another Project -->
+                <div class="projectCard revealOnScroll" data-delay="0.4"> <!-- Wrapper or card used to display projects inside the main container for displaying projects -->
                     <div class="projectInfo">
                         <p>
-                            <b>Web Designer & Developer</b><br>
-                            <i class="revealOnScrollEachLetter">Personal Project</i><br><br>
+                            <b>Film Landing Page</b><br>
+                            <i class="revealOnScrollEachLetter">Personal Project (Web Designer & Developer)</i><br><br>
                         </p>
                         <p>
-                            Designed, developed, and deployed a responsive landing page for our<br>
-                            personal film project to showcase the concept, cast, and teaser content.<br>
-                            Focused on clean UI/UX design, mobile responsiveness, and smooth<br>
+                            Designed, developed, and deployed a responsive landing page for our
+                            personal film project to showcase the concept, cast, and teaser content.
+                            Focused on clean UI/UX design, mobile responsiveness, and smooth
                             user interaction.
                         </p>
                     </div>
@@ -160,11 +178,13 @@
                     <p class="revealOnScroll" data-delay="0.6">and opportunities.</p>
 
                 <div class="social-icons revealOnScroll" data-delay="0.7">
-                    <i class="fa-brands fa-linkedin-in"></i>
-                    <i class="fa-brands fa-upwork"></i>
+                    <a href="https://www.linkedin.com/in/hrieu-andrie-b34a4b306">
+                        <i class="fa-brands fa-linkedin-in"></i>
+                    </a>
+                    <a href="https://www.upwork.com/freelancers/~01cb7e635016297537?mp_source=share">
+                        <i class="fa-brands fa-upwork"></i>
+                    </a>
                     <i class="fa-brands fa-instagram"></i>
-                    <i class="fa-brands fa-facebook-f"></i>
-                    <i class="fa-regular fa-envelope"></i>
                 </div>
             </section>
 
