--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             </section>
 
             <section class="imageContainer">
-                <img src="media\profileImage.jpg" alt="error fetching image" class="portfolioImage revealOnScroll" data-delay="0.4">
+                <img src="./profileImage.jpg" alt="error fetching image" class="portfolioImage revealOnScroll" data-delay="0.4">
             </section>
         </section>
     <!-- End of Section One -->
