--- a/index.html
+++ b/index.html
@@ -23,8 +23,7 @@
                     <span></span>
                 </button>
                 <ul class="navButtons" id="primary-navigation">
-                    <li class="revealOnScroll" data-target="Home" data-delay="0.3">Home</li>
-                    <li class="revealOnScroll" data-target="About" data-delay="0.4">About Me</li>
+                    <li class="revealOnScroll" data-target="About" data-delay="0.4">About</li>
                     <li class="revealOnScroll" data-target="Projects" data-delay="0.5">Projects</li>
                     <li class="revealOnScroll" data-target="Contact" data-delay="0.6">Contact</li>
                 </ul>
@@ -55,18 +54,15 @@
 
                 <section class="aboutMeDescription">
                     <p class="colorScrollText">
-                            Hi! I'm a BSIT student with a passion for building functional
-                            and user-friendly systems. I enjoy working across the full
-                            stack — from designing clean interfaces in Figma to
-                            developing backend logic and database integration, especially
-                            using Java.<br><br><br>
+                            Hi! I'm a BSIT student with a passion for designing and developing 
+                            user-friendly web interfaces. I enjoy turning ideas into functional 
+                            and visually engaging websites, with a focus on clean layout, intuitive 
+                            design, and smooth interactions.<br><br><br>
 
-                            One of my full-stack projects was a sales and inventory
-                            system for a bookstore, where I handled everything from UI
-                            design to CRUD operations and database management. I've
-                            also created and deployed a landing page for a personal film
-                            project, combining creativity and code to bring ideas to life on
-                            the web.<br><br><br>
+                            One of my projects was a landing page for a fictional Korean food restaurant, 
+                            where I combined creativity with code to deliver a visually appealing user experience.
+                            I’ve also worked on a client portfolio website that highlights their work in 
+                            photography and videography, prioritizing responsive design and effective layout.<br><br><br>
 
                             I'm always learning, exploring new technologies, and looking
                             for opportunities to grow as a developer. Whether it's solving
@@ -101,18 +97,37 @@
                 <div class="projectCard revealOnScroll" data-delay="0.1"> <!-- Wrapper or card used to display projects inside the main container for displaying projects -->
                     <div class="projectInfo">
                         <p>
-                            <b>Korean Restaurant Landing Page</b><br>
-                            <i class="revealOnScrollEachLetter">Personal Project (Web Designer & Developer)</i><br><br>
+                            <b>Freelance Client Portfolio Website</b><br>
+                            <i class="revealOnScrollEachLetter">Client Project (Web Designer & Developer)</i><br><br>
                         </p>
                         <p>
-                            Designed, developed, and deployed a modern landing page for a Korean restaurant,
-                            featuring an engaging showcase of the menu, restaurant story, and contact information.
-                            Prioritized clean and intuitive UI/UX design, smooth animations, and seamless user
-                            interactions to deliver an appealing and professional web experience.
+                            Currently designing and developing a modern portfolio website for my personal freelance client. 
+                            The site highlights the client's background, career milestones, featured works, services, and contact 
+                            information. The project focuses on clean and intuitive UI/UX design, smooth animations, and seamless 
+                            user interactions to create a visually engaging and professional online presence.
                         </p>
                     </div>
-                    <div class="projectDate revealOnScrollEachLetter">June 2025</div>
+                    <div class="projectDate revealOnScrollEachLetter">June 2025 (Ongoing)</div>
                 </div>
+                <!--Another Project-->
+                <a href="https://eirandrie.github.io/theSeoulTable/index.html" class="siteLinks">
+                    <div class="projectCard revealOnScroll" data-delay="0.1"> <!-- Wrapper or card used to display projects inside the main container for displaying projects -->
+                        <div class="visitOverlay">Visit Site</div>
+                        <div class="projectInfo">
+                            <p>
+                                <b>Korean Restaurant Landing Page</b><br>
+                                <i class="revealOnScrollEachLetter">Personal Project (Web Designer & Developer)</i><br><br>
+                            </p>
+                            <p>
+                                Designed, developed, and deployed a modern landing page for a Korean restaurant,
+                                featuring an engaging showcase of the menu, restaurant story, and contact information.
+                                Prioritized clean and intuitive UI/UX design, smooth animations, and seamless user
+                                interactions to deliver an appealing and professional web experience.
+                            </p>
+                        </div>
+                        <div class="projectDate revealOnScrollEachLetter">June 2025</div>
+                    </div>
+                </a>
             <!-- Another Project -->
                 <div class="projectCard revealOnScroll" data-delay="0.2"> <!-- Wrapper or card used to display projects inside the main container for displaying projects -->
                     <div class="projectInfo">
@@ -131,22 +146,25 @@
                     <div class="projectDate revealOnScrollEachLetter">April-May 2025</div>
                 </div>
             <!-- Another Project -->
-                <div class="projectCard revealOnScroll" data-delay="0.3"> <!-- Wrapper or card used to display projects inside the main container for displaying projects -->
-                    <div class="projectInfo">
-                        <p>
-                            <b>School Landing Page</b><br>
-                            <i class="revealOnScrollEachLetter">Senior Year Project (Web Designer & Developer)</i><br><br>
-                        </p>
-                        <p>
-                            Designed, developed, and deployed a responsive landing page for our school website as
-                            part of our final programming project, hosted online via GitHub Pages. The site showcases
-                            the school's mission and vision, an overview about the school, admission requirements,
-                            and an interactive prototype of the enrollment form. It also features a dynamic display of
-                            user-submitted enrollment data to simulate a real enrollment process.
-                        </p>
+                <a href="https://eirandrie.github.io/snmmsi/index.html" class="siteLinks">
+                    <div class="projectCard revealOnScroll" data-delay="0.3"> <!-- Wrapper or card used to display projects inside the main container for displaying projects -->
+                        <div class="visitOverlay">Visit Site</div>
+                        <div class="projectInfo">
+                            <p>
+                                <b>School Landing Page</b><br>
+                                <i class="revealOnScrollEachLetter">Senior Year Project (Web Designer & Developer)</i><br><br>
+                            </p>
+                            <p>
+                                Designed, developed, and deployed a landing page for our school website as
+                                part of our final programming project, hosted online via GitHub Pages. The site showcases
+                                the school's mission and vision, an overview about the school, admission requirements,
+                                and an interactive prototype of the enrollment form. It also features a dynamic display of
+                                user-submitted enrollment data to simulate a real enrollment process.
+                            </p>
+                        </div>
+                        <div class="projectDate revealOnScrollEachLetter">April-May 2024</div>
                     </div>
-                    <div class="projectDate revealOnScrollEachLetter">April-May 2024</div>
-                </div>
+                </a>
             <!-- Another Project -->
                 <div class="projectCard revealOnScroll" data-delay="0.4"> <!-- Wrapper or card used to display projects inside the main container for displaying projects -->
                     <div class="projectInfo">
@@ -155,13 +173,11 @@
                             <i class="revealOnScrollEachLetter">Personal Project (Web Designer & Developer)</i><br><br>
                         </p>
                         <p>
-                            Designed, developed, and deployed a responsive landing page for our
-                            personal film project to showcase the concept, cast, and teaser content.
-                            Focused on clean UI/UX design, mobile responsiveness, and smooth
-                            user interaction.
-                        </p>
+                            Designed and developed landing page for our personal film project to showcase the concept, 
+                            cast, and teaser content. Focused on clean UI/UX design, and smoothuser interaction.
+                        </p>    
                     </div>
-                    <div class="projectDate revealOnScrollEachLetter">Febuary-March 2024</div>
+                    <div class="projectDate revealOnScrollEachLetter">Febuary 2024</div>
                 </div>
             </div>
         </section>
